--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"eslint-plugin-react": "^7.23.2",
 		"eslint-plugin-react-hooks": "^4.2.0",
 		"prettier": "^2.3.0",
+		"react-icons": "^4.2.0",
 		"react-redux": "^7.2.4",
 		"react-router-dom": "^5.2.0",
 		"redux": "^4.1.0",
